# hammond

./: .gitignore  README.md  devenv.nix  flake.nix  go.mod  go.sum  greeter.go  nixos-module.nix  pyproject.toml
.claude/: settings.local.json
src/hammond/: logger.py  main.py  mealie.py  pushover.py  systemd_creds.py
src/hammond/services/: greeter.py
stubs/: coloredlogs.pyi
stubs/urlextract/: __init__.pyi
tests/: test_systemd_creds.py
